--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,300 +6,95 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇮🇳_IN_印度
-    type: trojan
-    server: 152.70.74.66
-    port: 443
-    udp: true
-    password: d906afe5-7c3c-4ddc-aaa4-61c154a82e5e
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_1
-    type: trojan
-    server: 149.50.71.164
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇯🇵_JP_日本_1
-    type: trojan
-    server: trs19.bolab.net
-    port: 443
-    udp: true
-    password: 7a73f1dc97a70905870c0c0484b12145
-    sni: trs19.bolab.net
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_2
-    type: trojan
-    server: 149.50.71.124
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇯🇵_JP_日本_2
-    type: ss
-    server: 13.230.137.173
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_1
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
     type: vmess
-    server: 141.101.113.15
-    port: 2053
+    server: 5m4h0k05.mcfront.xyz
+    port: 31606
     cipher: auto
-    uuid: 0404bc28-9cfc-4fbb-9e4c-c3f3ba87f384
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
     alterId: 0
     tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue01
-      headers:
-        host: x1.ylks01.eu.org
-  - &id007
+    servername: hk05.lovemc.xyz
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
+    type: vmess
+    server: 7p3h04.abzoones.xyz
+    port: 36801
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ph04.abpilot.xyz
+    network: tcp
+  - &id003
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 45.86.8.78
-    port: 49214
+    server: 192.74.243.58
+    port: 43246
     cipher: auto
     uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
     alterId: 64
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id008
+  - &id004
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_1
+    type: vmess
+    server: 8k2r04.abzoones.xyz
+    port: 36401
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kr04.abpilot.xyz
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 2h4u04.abzoones.xyz
+    port: 36864
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.abpilot.xyz
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
+    type: vmess
+    server: 8t6w04.abzoones.xyz
+    port: 36301
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw04.abpilot.xyz
+    network: tcp
+  - &id007
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: smt.ircf.space
-    port: 443
-    cipher: auto
-    uuid: 3bcbd5cd-e791-4770-8bc7-7b1d941c9513
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /S4PSg9xqUClN2kJ4SOPKqC6
-      headers:
-        host: wfi.sahnama.com
-  - &id009
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 104.31.16.27
+    server: cf-dx-dns.sharecentre.online
     port: 80
     cipher: auto
-    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /IOebhLMhl1CTbFHbL95myfRX2
+      path: /shirker
       headers:
-        host: ca5.tehme2.fun
-  - &id010
-    name: 🇮🇱_IL_以色列->🇩🇪_DE_德国_1
-    type: trojan
-    server: de1.nigirocloud.com
-    port: 4003
-    udp: true
-    password: PlF471nxneY0YevI
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_3
-    type: trojan
-    server: 149.50.71.155
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id012
+        host: dp4.scproxy.top
+  - &id008
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: zfc.windowsupdate1.com
-    port: 443
-    cipher: auto
-    uuid: 41bec492-cd79-4b57-9a15-7d2bb00fcfca
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/usfh2?ed=2048
-      headers:
-        host: usfh2.pqjc.buzz
-  - &id013
-    name: 🇸🇬_SG_新加坡_1
-    type: ss
-    server: 3.0.183.226
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: 104.16.150.9
-    port: 443
-    cipher: auto
-    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /P6kpn5UKG40MNLK2
-      headers:
-        host: XWOp2D.janbaroon.com
-  - &id015
-    name: 🇺🇦_UA_乌克兰->🇬🇧_GB_英国
-    type: vmess
-    server: 212.110.134.7
-    port: 443
-    cipher: auto
-    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /P6kpn5UKG40MNLK2
-      headers:
-        host: zHGKLbqn6UM.janbaroon.com
-  - &id016
-    name: 🇧🇷_BR_巴西
-    type: vmess
-    server: menmaza.76898102.xyz
-    port: 2052
-    cipher: auto
-    uuid: 12d06bb6-d797-3cf3-b368-a903b8702f2c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /eduifbiefg
-      headers:
-        host: menmaz.76898102.xyz
-  - &id017
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: 104.16.32.142
-    port: 443
-    cipher: auto
-    uuid: 3de4ec27-74b4-43e3-bf23-18e726ac80bc
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /P6kpn5UKG40MNLK2
-      headers:
-        host: QkGxa2MSvmu.janbaroon.com
-  - &id018
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.18.83.10
-    port: 443
-    cipher: auto
-    uuid: dddd0b29-1576-4003-9990-d7cea34264db
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /835757
-      headers:
-        host: dedi2.1808.cf
-  - &id019
-    name: 🇮🇱_IL_以色列->🇦🇺_AU_澳大利亚
-    type: trojan
-    server: 149.50.66.127
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id020
-    name: 🇮🇱_IL_以色列->🇪🇪_EE_爱沙尼亚
-    type: trojan
-    server: 149.50.92.75
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id021
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: cat-1.opensvr.net
-    port: 443
-    udp: true
-    password: opentunnel.net-newdday
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 141.193.68.93
-    port: 443
-    udp: true
-    password: b25cbc3a-d7e8-4fe4-b7a0-d3d18985bcf4
-    sni: 18-140-66-207.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 7i4n04.abzoones.xyz
-    port: 36831
-    cipher: auto
-    uuid: e5372196-5167-4971-8dcd-85ebd13e6d49
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.abpilot.xyz
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国->🇯🇵_JP_日本
-    type: vmess
-    server: 10.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-    port: 8080
-    cipher: auto
-    uuid: 31d49dee-0931-4223-a0bb-60141bc51141
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jpppp.cashdawiodxkawjaiocjdawdawdadwrawgfsegsededwadawfgrdrcvsssl.top
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: 3u1s06.abzoones.xyz
-    port: 36511
-    cipher: auto
-    uuid: e5372196-5167-4971-8dcd-85ebd13e6d49
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us06.abpilot.xyz
-    network: tcp
-  - &id026
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.27.38.10
+    server: 104.27.17.155
     port: 8880
     cipher: auto
     uuid: 53ae65be-81ee-4766-8a09-da43c44c4d30
@@ -311,114 +106,336 @@ proxies:
       path: /youlingkaishi
       headers:
         host: uyaa.vtcss.top
-  - &id027
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
+  - &id009
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
     type: vmess
-    server: 1j8p04.abzoones.xyz
-    port: 36116
+    server: 9t1d5e04.mcfront.xyz
+    port: 31841
     cipher: auto
-    uuid: e5372196-5167-4971-8dcd-85ebd13e6d49
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: jp04.abpilot.xyz
+    servername: de04.lovemc.xyz
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_2
+    type: vmess
+    server: 8l2k1r04.mcfront.xyz
+    port: 31401
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kr04.lovemc.xyz
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: vmess
+    server: 7c6i2r04.mcfront.xyz
+    port: 31877
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br04.lovemc.xyz
+    network: tcp
+  - &id012
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 2t1u04.abzoones.xyz
+    port: 36868
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tr04.abpilot.xyz
+    network: tcp
+  - &id013
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 5c1a04.abzoones.xyz
+    port: 36701
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.abpilot.xyz
+    network: tcp
+  - &id014
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 3d6e04.abzoones.xyz
+    port: 36841
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.abpilot.xyz
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.25.137.57
+    port: 2083
+    cipher: auto
+    uuid: e883ff76-3bb4-4008-c068-6b5b1d960ea7
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /youlingkaishi
+      headers:
+        host: uyaa.vtcss.top
+  - &id016
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 9s5g04.abzoones.xyz
+    port: 36201
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg04.abpilot.xyz
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 9s5g06.abzoones.xyz
+    port: 36211
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.abpilot.xyz
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
+    type: vmess
+    server: 4o5a3u04.mcfront.xyz
+    port: 31821
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.lovemc.xyz
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 3u1s05.abzoones.xyz
+    port: 36506
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: us05.abpilot.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: 8h2k06.abzoones.xyz
+    port: 36611
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk06.abpilot.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: 9s5g05.abzoones.xyz
+    port: 36206
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg05.abpilot.xyz
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 6q3i1n04.mcfront.xyz
+    port: 31831
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: in04.lovemc.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰_1
+    type: vmess
+    server: 8u9a04.abzoones.xyz
+    port: 36871
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.abpilot.xyz
+    network: tcp
+  - &id024
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.25.129.208
+    port: 2052
+    cipher: auto
+    uuid: 243240f9-9f5b-4f98-dd5c-e19784d19631
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /youlingkaishi
+      headers:
+        host: uyaa.vtcss.top
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰_2
+    type: vmess
+    server: 4w7u4a04.mcfront.xyz
+    port: 31871
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ua04.lovemc.xyz
+    network: tcp
+  - &id026
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 7c1a1r04.mcfront.xyz
+    port: 31861
+    cipher: auto
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.lovemc.xyz
+    network: tcp
+  - &id027
+    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
+    type: vmess
+    server: 5a4u04.abzoones.xyz
+    port: 36821
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: au04.abpilot.xyz
     network: tcp
   - &id028
-    name: 🇺🇸_US_美国_7
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
     type: vmess
-    server: 142.4.99.77
-    port: 43379
+    server: 6w7j3p04.mcfront.xyz
+    port: 31116
     cipher: auto
-    uuid: b65da4af-a12a-4a59-9316-4549e12ba62c
-    alterId: 64
-    tls: false
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
+    alterId: 0
+    tls: true
     skip-cert-verify: true
+    servername: jp04.lovemc.xyz
     network: tcp
   - &id029
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
     type: vmess
-    server: 8h2k04.abzoones.xyz
-    port: 36601
+    server: 2w8u2a04.mcfront.xyz
+    port: 31874
     cipher: auto
-    uuid: e5372196-5167-4971-8dcd-85ebd13e6d49
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: hk04.abpilot.xyz
+    servername: vn04.lovemc.xyz
     network: tcp
   - &id030
-    name: 🇺🇸_US_美国_8
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: vmess
-    server: 104.27.60.217
-    port: 8080
+    server: 3a4u0k04.mcfront.xyz
+    port: 31811
     cipher: auto
-    uuid: c5c9844d-050e-44f1-cb6d-ec5166772631
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer00
-      headers:
-        host: x2.ylks01.eu.org
-  - &id031
-    name: 🇺🇸_US_美国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 198.41.221.113
-    port: 2096
-    cipher: auto
-    uuid: f387a0af-4b70-4a40-e2c3-2f22472df0cb
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
     alterId: 0
     tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /blue01
-      headers:
-        host: x1.ylks01.eu.org
-  - &id032
-    name: 🇺🇸_US_美国_9
+    servername: uk04.lovemc.xyz
+    network: tcp
+  - &id031
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 129.146.133.157
-    port: 51009
+    server: 4a2u0a05.mcfront.xyz
+    port: 31506
     cipher: auto
-    uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b
+    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
+    servername: us05.lovemc.xyz
+    network: tcp
+  - &id032
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
+    type: vmess
+    server: 8t6w05.abzoones.xyz
+    port: 36306
+    cipher: auto
+    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw05.abpilot.xyz
     network: tcp
   - &id033
-    name: 🇯🇵_JP_日本_3
-    type: vmess
-    server: oci.donpau.com
-    port: 443
-    cipher: auto
-    uuid: 3C02DC15-56AE-7889-8936-9A2EA8FF8666
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: oci.donpau.com
-  - &id034
-    name: 🇮🇱_IL_以色列->🇩🇪_DE_德国_2
+    name: 🇮🇱_IL_以色列->🇺🇸_US_美国
     type: trojan
-    server: de3.nigirocloud.com
+    server: us2.chuqiangtou.net
     port: 4003
     udp: true
-    password: PlF471nxneY0YevI
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id034
+    name: 🇯🇵_JP_日本
+    type: trojan
+    server: trs21.bolab.net
+    port: 443
+    udp: true
+    password: 7a73f1dc97a70905870c0c0484b12145
+    sni: trs21.bolab.net
     skip-cert-verify: true
     network: tcp
   - &id035
-    name: 🇸🇬_SG_新加坡_2
+    name: 🇺🇸_US_美国_6
     type: trojan
-    server: hk2.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 12025
+    server: 138.197.5.103
+    port: 443
     udp: true
-    password: 4b526505-3de3-4cb4-8f99-70b65adea09f
-    sni: 13-231-155-134.NHOST.00CDN.COM
+    password: xxoo
+    sni: dserver.adad.ir
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇺🇸_US_美国_7
+    type: trojan
+    server: 163.123.192.154
+    port: 443
+    udp: true
+    password: 997a9caa-5950-476f-8614-462fb2e0ed18
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -482,6 +499,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -522,6 +540,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -560,6 +579,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
