--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,30 +6,182 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
-    type: vmess
-    server: 5m4h0k05.mcfront.xyz
-    port: 31606
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
+    name: 🇮🇱_IL_以色列->🇺🇸_US_美国
+    type: trojan
+    server: us1.chuqiangtou.net
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
     skip-cert-verify: true
-    servername: hk05.lovemc.xyz
     network: tcp
   - &id002
-    name: 🇨🇳_CN_中国->🇵🇭_PH_菲律宾
+    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_1
+    type: trojan
+    server: 149.50.71.124
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: ko1.lianpi.xyz
+    port: 51256
+    udp: true
+    password: ab204b2d-dac8-4cf4-8239-d46d49d9cad5
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_2
+    type: trojan
+    server: 149.50.71.155
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇮🇱_IL_以色列->🇳🇱_NL_荷兰_1
+    type: trojan
+    server: 149.50.89.110
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇮🇱_IL_以色列->🇯🇵_JP_日本_3
+    type: trojan
+    server: 149.50.71.164
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇮🇱_IL_以色列->🇳🇱_NL_荷兰_2
+    type: trojan
+    server: 149.50.75.79
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇮🇱_IL_以色列->🇬🇧_GB_英国_1
+    type: trojan
+    server: uk1.chuqiangtou.net
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    sni: magnetadservices.com
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇮🇱_IL_以色列->🇬🇧_GB_英国_2
+    type: trojan
+    server: 149.50.77.129
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇹🇼_TW_台湾->🇺🇸_US_美国
+    type: trojan
+    server: hnm.xiaohouzi.club
+    port: 23330
+    udp: true
+    password: c32c56fb-64d9-33c4-b42a-af81b7a33fe7
+    sni: defapress.ir
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇸🇬_SG_新加坡_1
+    type: ss
+    server: 18.139.163.228
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇸🇬_SG_新加坡_2
+    type: ss
+    server: 3.0.183.226
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
     type: vmess
-    server: 7p3h04.abzoones.xyz
-    port: 36801
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
+    server: 202.108.15.135
+    port: 443
+    cipher: aes-128-gcm
+    uuid: dddd0b29-1576-4003-9990-d7cea34264db
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: ph04.abpilot.xyz
+    network: ws
+    ws-opts:
+      path: /835757
+      headers:
+        host: dedi2.1808.cf
+  - &id014
+    name: 🇸🇬_SG_新加坡_3
+    type: ss
+    server: 54.255.237.136
+    port: 2333
+    password: doub.io
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: vmess
+    server: cn-guangzhou.applebench.tech
+    port: 56268
+    cipher: auto
+    uuid: 7e319f7a-4c47-4606-8008-ce6c92634dd8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: tcp
-  - &id003
+  - &id016
+    name: 🇯🇵_JP_日本_1
+    type: ss
+    server: jp3.lianpi.xyz
+    port: 34234
+    password: 7e319f7a-4c47-4606-8008-ce6c92634dd8
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇭🇰_HK_香港
+    type: trojan
+    server: hk2.lianpi.xyz
+    port: 28069
+    udp: true
+    password: 7e319f7a-4c47-4606-8008-ce6c92634dd8
+    sni: hk2.lianpi.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇯🇵_JP_日本_2
+    type: trojan
+    server: jp4.lianpi.xyz
+    port: 54234
+    udp: true
+    password: 7e319f7a-4c47-4606-8008-ce6c92634dd8
+    sni: jp4.lianpi.xyz
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇮🇱_IL_以色列->🇬🇧_GB_英国_3
+    type: trojan
+    server: 149.50.77.99
+    port: 4003
+    udp: true
+    password: TJCfE7Mx2YcA8kX8zg
+    sni: telewebion.com
+    skip-cert-verify: true
+    network: tcp
+  - &id020
     name: 🇺🇸_US_美国_1
     type: vmess
     server: 192.74.243.58
@@ -40,387 +192,15 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_1
-    type: vmess
-    server: 8k2r04.abzoones.xyz
-    port: 36401
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.abpilot.xyz
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: 2h4u04.abzoones.xyz
-    port: 36864
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hu04.abpilot.xyz
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_1
-    type: vmess
-    server: 8t6w04.abzoones.xyz
-    port: 36301
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.abpilot.xyz
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: cf-dx-dns.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: 2d5d8b9c-8ec4-4a37-b610-78e71e13eaef
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /shirker
-      headers:
-        host: dp4.scproxy.top
-  - &id008
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.27.17.155
-    port: 8880
-    cipher: auto
-    uuid: 53ae65be-81ee-4766-8a09-da43c44c4d30
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /youlingkaishi
-      headers:
-        host: uyaa.vtcss.top
-  - &id009
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
-    type: vmess
-    server: 9t1d5e04.mcfront.xyz
-    port: 31841
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.lovemc.xyz
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国_2
-    type: vmess
-    server: 8l2k1r04.mcfront.xyz
-    port: 31401
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: kr04.lovemc.xyz
-    network: tcp
-  - &id011
-    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
-    type: vmess
-    server: 7c6i2r04.mcfront.xyz
-    port: 31877
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: br04.lovemc.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 2t1u04.abzoones.xyz
-    port: 36868
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.abpilot.xyz
-    network: tcp
-  - &id013
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 5c1a04.abzoones.xyz
-    port: 36701
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ca04.abpilot.xyz
-    network: tcp
-  - &id014
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 3d6e04.abzoones.xyz
-    port: 36841
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: de04.abpilot.xyz
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.25.137.57
-    port: 2083
-    cipher: auto
-    uuid: e883ff76-3bb4-4008-c068-6b5b1d960ea7
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /youlingkaishi
-      headers:
-        host: uyaa.vtcss.top
-  - &id016
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
-    type: vmess
-    server: 9s5g04.abzoones.xyz
-    port: 36201
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg04.abpilot.xyz
-    network: tcp
-  - &id017
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
-    type: vmess
-    server: 9s5g06.abzoones.xyz
-    port: 36211
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg06.abpilot.xyz
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
-    type: vmess
-    server: 4o5a3u04.mcfront.xyz
-    port: 31821
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.lovemc.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 3u1s05.abzoones.xyz
-    port: 36506
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.abpilot.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
-    type: vmess
-    server: 8h2k06.abzoones.xyz
-    port: 36611
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk06.abpilot.xyz
-    network: tcp
   - &id021
-    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
-    type: vmess
-    server: 9s5g05.abzoones.xyz
-    port: 36206
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: sg05.abpilot.xyz
-    network: tcp
-  - &id022
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 6q3i1n04.mcfront.xyz
-    port: 31831
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.lovemc.xyz
-    network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰_1
-    type: vmess
-    server: 8u9a04.abzoones.xyz
-    port: 36871
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.abpilot.xyz
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.25.129.208
-    port: 2052
-    cipher: auto
-    uuid: 243240f9-9f5b-4f98-dd5c-e19784d19631
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /youlingkaishi
-      headers:
-        host: uyaa.vtcss.top
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰_2
-    type: vmess
-    server: 4w7u4a04.mcfront.xyz
-    port: 31871
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.lovemc.xyz
-    network: tcp
-  - &id026
-    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
-    type: vmess
-    server: 7c1a1r04.mcfront.xyz
-    port: 31861
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ar04.lovemc.xyz
-    network: tcp
-  - &id027
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
-  - &id028
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本
-    type: vmess
-    server: 6w7j3p04.mcfront.xyz
-    port: 31116
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp04.lovemc.xyz
-    network: tcp
-  - &id029
-    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
-    type: vmess
-    server: 2w8u2a04.mcfront.xyz
-    port: 31874
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: vn04.lovemc.xyz
-    network: tcp
-  - &id030
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 3a4u0k04.mcfront.xyz
-    port: 31811
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uk04.lovemc.xyz
-    network: tcp
-  - &id031
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 4a2u0a05.mcfront.xyz
-    port: 31506
-    cipher: auto
-    uuid: 70c14f6c-0af6-423a-a27a-23b2c2441901
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us05.lovemc.xyz
-    network: tcp
-  - &id032
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾_2
-    type: vmess
-    server: 8t6w05.abzoones.xyz
-    port: 36306
-    cipher: auto
-    uuid: 7792066c-8759-4c1f-bb57-db78b40aa52d
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw05.abpilot.xyz
-    network: tcp
-  - &id033
-    name: 🇮🇱_IL_以色列->🇺🇸_US_美国
-    type: trojan
-    server: us2.chuqiangtou.net
-    port: 4003
-    udp: true
-    password: TJCfE7Mx2YcA8kX8zg
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇯🇵_JP_日本
-    type: trojan
-    server: trs21.bolab.net
+    name: 🇯🇵_JP_日本_3
+    type: ss
+    server: 13.230.137.173
     port: 443
-    udp: true
-    password: 7a73f1dc97a70905870c0c0484b12145
-    sni: trs21.bolab.net
-    skip-cert-verify: true
-    network: tcp
-  - &id035
-    name: 🇺🇸_US_美国_6
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇺🇸_US_美国_2
     type: trojan
     server: 138.197.5.103
     port: 443
@@ -429,13 +209,172 @@ proxies:
     sni: dserver.adad.ir
     skip-cert-verify: true
     network: tcp
-  - &id036
-    name: 🇺🇸_US_美国_7
+  - &id023
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: vmess
+    server: cn-guangzhou.applebench.tech
+    port: 41502
+    cipher: auto
+    uuid: 7e319f7a-4c47-4606-8008-ce6c92634dd8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇸🇬_SG_新加坡_4
+    type: ss
+    server: 13.213.66.163
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id025
+    name: 🇸🇬_SG_新加坡_5
+    type: ss
+    server: 13.215.175.189
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id026
+    name: 🇯🇵_JP_日本_4
     type: trojan
-    server: 163.123.192.154
+    server: fscjp.fscloud123456789.com
     port: 443
     udp: true
-    password: 997a9caa-5950-476f-8614-462fb2e0ed18
+    password: 5057f49b-3038-4683-a5d9-8d9657caef3c
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: smt.ircf.space
+    port: 443
+    cipher: auto
+    uuid: 3bcbd5cd-e791-4770-8bc7-7b1d941c9513
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /S4PSg9xqUClN2kJ4SOPKqC6
+      headers:
+        host: wfi.sahnama.com
+  - &id028
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: ger.digires.shop
+    port: 443
+    cipher: auto
+    uuid: f988dd2c-0d1a-49d0-cabc-a1288d72d183
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /14161
+      headers:
+        host: ger.digires.shop
+  - &id029
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: sbn.ircf.space
+    port: 443
+    cipher: auto
+    uuid: 3bcbd5cd-e791-4770-8bc7-7b1d941c9513
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /S4PSg9xqUClN2kJ4SOPKqC6
+      headers:
+        host: wfi.sahnama.com
+  - &id030
+    name: 🇮🇱_IL_以色列->🇩🇪_DE_德国
+    type: trojan
+    server: 149.50.76.85
+    port: 4003
+    udp: true
+    password: PlF471nxneY0YevI
+    sni: de2.nigirocloud.com
+    skip-cert-verify: true
+    network: tcp
+  - &id031
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 104.31.16.28
+    port: 80
+    cipher: auto
+    uuid: 58fe1542-5290-40ad-815a-77707a81afe5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /IOebhLMhl1CTbFHbL95myfRX2
+      headers:
+        host: ca4.tehme2.fun
+  - &id032
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: us.blazeppn.info
+    port: 443
+    udp: true
+    password: xxoo
+    skip-cert-verify: true
+    network: tcp
+  - &id033
+    name: 🇬🇧_GB_英国
+    type: ss
+    server: 51.132.13.41
+    port: 52484
+    password: G4h2X1AThBilGI1eUrXny6
+    cipher: chacha20-ietf-poly1305
+  - &id034
+    name: 🇹🇼_TW_台湾
+    type: vmess
+    server: hinettw1.applebench.tech
+    port: 56568
+    cipher: auto
+    uuid: 1f3d67b4-6929-4598-90ca-84a841bf02e4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.18.83.10
+    port: 443
+    cipher: auto
+    uuid: dddd0b29-1576-4003-9990-d7cea34264db
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /835757
+      headers:
+        host: dedi2.1808.cf
+  - &id036
+    name: 🇻🇳_VN_越南
+    type: vmess
+    server: 103.190.36.130
+    port: 80
+    cipher: auto
+    uuid: e79dcd87-ea5c-4058-a186-c7e3bc844ab8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /gachcraft
+  - &id037
+    name: 🇯🇵_JP_日本_5
+    type: trojan
+    server: jp7.lianpi.xyz
+    port: 53638
+    udp: true
+    password: 7e319f7a-4c47-4606-8008-ce6c92634dd8
     skip-cert-verify: true
     network: tcp
 proxy-groups:
@@ -500,6 +439,7 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
+      - *id037
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -541,6 +481,7 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
+      - *id037
   - name: SELECT
     type: select
     proxies:
@@ -580,6 +521,7 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
+      - *id037
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
